[tool.poetry]
name = "defiyield"
version = "0.1.0"
description = ""
authors = ["Lukas Bures <burylukas@seznam.cz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
starlette = "^0.23.1"
requests = "^2.28.2"
pandas = "^1.5.3"
matplotlib = "^3.6.3"
tqdm = "^4.64.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
